# Third-Kind-Contact

./: .env.example  LICENSE  README.md  index.html  package-lock.json  package.json
src/: PetApp.tsx  SelectionApp.tsx  config.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: GoldRain.tsx  SoulChatOverlay.tsx
src/components/pet/: PetChatPanel.tsx  PetContextMenu.tsx  PetSprite.tsx
src/components/scene/: CompanionStage.tsx
src/data/: prebuilt.ts
src/lib/: api.ts  imageApi.ts  petActions.ts  scenePlanner.ts  sceneStore.ts  sceneTypes.ts  seedManager.ts  seedanceApi.ts  soul.ts  spriteStore.ts  store.ts  visualStyle.ts
src/pages/: HallPage.tsx  SceneGenPage.tsx  SpriteGenPage.tsx  SummonPage.tsx
